--- a/css/style1.css
+++ b/css/style1.css
@@ -1,14 +1,17 @@
 .stylesNav{
     display: flex;
     list-style-type: none;
-    justify-content: flex-end;
+    justify-content: center;
+    width: max-content;
 
 }
 .stylesNav>li{
     margin-left: 10px;
     margin-right: 10px;
 }
-
+.header{
+    width: 100%;
+}
 .content{
     height: 100vh;
     display: flex;
